notifications-management-faf/atlantis-notification-management-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: fa-metrics
  name: atlantis-verify
  labels:
    app: atlantis-verify
spec:
  replicas: 1
  selector:
    matchLabels:
      app: atlantis-verify
  template:
    metadata:
      labels:
        app: atlantis-verify
    spec:
      containers:
        - name: atlantis-verify
          image: registry.services.atlantishq.de/atlantishq/atlantis-verify:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
