notifications-management-faf/dispatcher-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-dispatcher
  labels:
    app: event-dispatcher
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-dispatcher
  template:
    metadata:
      labels:
        app: event-dispatcher
    spec:
      containers:
        - name: event-dispatcher
          image: registry.services.atlantishq.de/atlantishq/event-dispatcher
          imagePullPolicy: Always
          ports:
            - containerPort: 5000
          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 15
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
