notifications-management-faf/dispatcher-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-dispatcher-worker
  labels:
    app: event-dispatcher-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: event-dispatcher-worker
  template:
    metadata:
      labels:
        app: event-dispatcher-worker
    spec:
      containers:
        - name: event-dispatcher-worker
          image: registry.services.atlantishq.de/atlantishq/event-dispatcher-worker
          imagePullPolicy: Always
