notifications-management-faf/atlantis-verify-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: atlantis-verify
spec:
  selector:
    app: atlantis-verify
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
