notifications-management-faf/dispatcher-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-dispatcher
spec:
  selector:
    app: event-dispatcher
  ports:
    - port: 80
      targetPort: 5000
  type: ClusterIP
