notifications-management-faf/ntfy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ntfy
  template:
    metadata:
      labels:
        app: ntfy
    spec:
      containers:
        - name: ntfy
          image: binwiederhier/ntfy:latest
          args:
            - serve
          ports:
            - containerPort: 80
          volumeMounts:
            - name: cache
              mountPath: /var/cache/ntfy
          readinessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /v1/health
              port: 80
            initialDelaySeconds: 40
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: cache
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: ntfy
spec:
  selector:
    app: ntfy
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
